[package]
name = "disk9k1"
version = "0.1.0"
authors = ["oreganoli <1141291-oreganoli@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocket-multipart-form-data = "0.7.2"
diesel = {version = "1.4.3", features = ["postgres"]}
dotenv = "0.15.0"
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
tera = "1.0.0-beta.18"
diesel_migrations = "1.4.0"