[package]
name = "disk9k1"
version = "0.1.0"
authors = ["oreganoli <1141291-oreganoli@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.6.1"
chrono = {version = "0.4.9", features = ["serde"]}
crc32fast = "1.2.0"
lazy_static = "1.4.0"
mime-sniffer = "0.1.2"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocket-multipart-form-data = "0.7.2"
postgres = "0.17.0"
r2d2 = "0.8.8"
r2d2_postgres = "0.16.0"
dotenv = "0.15.0"
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.41"
diesel_migrations = "1.4.0"